--- a/template/package.json
+++ b/template/package.json
@@ -13,10 +13,8 @@
     "lint": "eslint --ext .js,.vue src{{#unit}} test/unit/specs{{/unit}}{{#e2e}} test/e2e/specs{{/e2e}}"{{/lint}}
   },
   "dependencies": {
-    "vue": "^2.1.0",
-    "vux": "^2.1.0-rc.48",
+    "vux": "^2.1.0",
     "fastclick": "^1.0.6",
-    "vue-router": "^2.0.1",
     "vuex-i18n": "^1.3.1",
     "vuex": "^2.1.1",
     "vue": "^2.1.10",
