--- a/template/package.json
+++ b/template/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
+    "axios-mock-adapter": "^1.8.1",
     "babel-core": "^6.22.1",
     {{#lint}}
     "babel-eslint": "^7.1.1",
